actualizar perfil y ver completo(pero se buguea con el nav)

--- a/system_huellitas/views/public/perfil_editar.html
+++ b/system_huellitas/views/public/perfil_editar.html
@@ -86,7 +86,7 @@
                         <br>
                         <!-- Botones de acción (Agregar, Ocultar) -->
                         <a href="../../views/public/perfil.html"><button type="submit"
-                                class="btn btn-brown-color btn-lg text-white">Actualizar</button></a>
+                        class="btn btn-brown-color btn-lg text-white">Actualizar</button></a>
                         <br>
                     </div>
                     </form>
@@ -106,6 +106,7 @@
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
     <script type="text/javascript" src="../../controllers/utils/components.js"></script>
+    <script type="text/javascript"  src="../../node_modules/vanilla-text-mask/dist/vanillaTextMask.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script src="../../controllers/utils/public.js"></script>
     <script type="text/javascript" src="../../controllers/public/perfil_editar.js"></script>
