--- a/system_huellitas/views/public/perfil.html
+++ b/system_huellitas/views/public/perfil.html
@@ -36,7 +36,7 @@
                     <!-- Columna izquierda: Imagen de perfil -->
                     <div class="col-lg-4 col-md-6 col-sm-7 p-5">
                         <form action="perfil_editar_imagen" id="perfil_cliente_vista">
-                            <img id="imagen" src="../../resources/img/png/foto_perfil_publico.png" class="img-fluid">
+                            <img id="imagen" class="img-fluid">
                             <br>
                             <br>
                         </form>
