--- a/system_huellitas/views/public/sobre_nosotros.html
+++ b/system_huellitas/views/public/sobre_nosotros.html
@@ -134,8 +134,12 @@
 
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos la ruta para agregar el footer -->
+    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script src="../../controllers/utils/public.js"></script>
+    <!-- Agregamos la ruta para agregar el controlador de la pantalla-->
+    <script type="text/javascript" src="../../controllers/public/terminos_condiciones.js"></script>
 </body>
 
 </html>
